<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#000000"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    android:paddingBottom="0dp"
    tools:context=".LoginActivity">

    <ImageView
        android:src="@drawable/trashhand_background"
        android:scaleType="centerCrop"
        android:alpha="0.5"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ImageView
        android:id="@+id/ivLoginIcon"
        android:src="@drawable/login_icon"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tvTopRight"
        android:text="@string/log_in_caps"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:paddingTop="16dp"
        android:paddingRight="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:id="@+id/etEmail"
        android:hint="@string/email"
        android:onClick="onLoginFieldClicked"
        android:drawableRight="@drawable/eye_icon_closed"
        android:textColor="#FFFFFF"
        android:textColorHint="#80FFFFFF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivLoginIcon"
        android:layout_marginTop="60dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp" />

    <EditText
        android:id="@+id/etPassword"
        android:hint="@string/password"
        android:textColor="#FFFFFF"
        android:drawableRight="@drawable/eye_icon_open"
        android:textColorHint="#80FFFFFF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etEmail"
        android:layout_marginTop="8dp"
        android:layout_alignLeft="@+id/etEmail"
        android:layout_alignStart="@+id/etEmail"
        android:layout_alignRight="@+id/etEmail"
        android:layout_alignEnd="@+id/etEmail" />

    <TextView
        android:text="@string/forgot_password"
        android:onClick="onForgotPasswordClicked"
        android:textColor="#80FFFFFF"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etPassword"
        android:layout_marginTop="32dp"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/tvBottomLeft"
        android:text="@string/sign_up"
        android:textColor="#FFFFFF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="16dp"
        android:textStyle="bold"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/terms"
        android:textColor="#FFFFFF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
